# sutra

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  STATE_SPEC.md  create-test-envs.sh  resume.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: INTEGRATION.md
src/: gui.rs  lib.rs  main.rs  model.rs  notifications.rs  tui.rs  watcher.rs
